== 1.0.8 (2010-04-10)

=== Bugfixes
* Removed illegal comma from Ukrainian synonym. (Aslak Hellesøy)

== 1.0.7 (2010-04-10)

=== Bugfixes
* Fixed problems with packaging of 1.0.6 release. (Aslak Hellesøy)

== 1.0.6 (2010-04-10)

=== New Features
* Fully automated release process. (Aslak Hellesøy)

=== Changed Features
* Made generated classes use a more uniform naming convention. (Aslak Hellesøy)

=== Removed Features
* Removed C# port, obsoleted by IKVM build from 1.0.5. (Aslak Hellesøy)

== 1.0.5 (2010-04-08)

=== New Features
* New .NET build of gherkin - an ikvmc build of gherkin.jar to gherkin.dll. (Aslak Hellesøy)

=== Bugfixes
* Made parsers reusable so that the same instance can parse several features. (Aslak Hellesøy)

== 1.0.4 (2010-04-07)

=== New features
* Pure java releases of Gherkin at http://cukes.info/maven
* A FilterListener in Ruby that is the last missing piece to plug Gherkin into Cucumber. (Gregory Hnatiuk, Aslak Hellesøy, Matt Wynne, Mike Sassak)

=== Changed features
* The Lexer now emits the '@' for tags. (Aslak Hellesøy)

== 1.0.3 (2010-03-31)

=== Bugfixes
* The C lexer correctly instantiates a new array for each table, instead of reusing the old one. (Aslak Hellesøy)
* Emit keywords with space instead of stripping (< keywords are emmitted without space) (Aslak Hellesøy)
* gherkin reformat now prints comments, and does it with proper indentation (Aslak Hellesøy)
* .NET resource files are now automatically copied into the .dll (#46 Aslak Hellesøy)

=== New features
* The Pure Java implementation now has a simple main method that pretty prints a feature. (#39 Aslak Hellesøy) 
* Writing code generated i18n syntax highlighters for Gherkin is a lot easier thanks to several convenience methods in Gherkin::I18n. (Aslak Hellesøy)
* .NET (C#) port (#36, #37 Attila Sztupak)
* Tables parsed and sent by row rather than by table. (Mike Sassak)

=== Changed features