@@ -1,3 +1,8 @@
+== In Git
+
+=== Bugfixes
+* Triple escaped quotes (\"\"\") in PyStrings are unescaped to """. (Aslak Hellesøy)
+
 == 1.0.8 (2010-04-10)
 
 === Bugfixes
